# napari-resview

./: .copier-answers.yml  AUTHORS.rst  LICENSE  LICENSE_README.md  README.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.md  feature_request.md
.github/workflows/: test_and_deploy.yml
src/napari_resview/: _widget.py  data_io.py  data_viz.py  isr_to_nexus.py  napari.yaml  resview_widget.py  rsm3d.py  rsm3d_defaults.yaml  spec_parser.py
src/rsm3d/: data_io.py  data_viz.py  rsm3d.py  spec_parser.py
tests/: conftest.py  test_nexus_loader.py  test_reader.py  test_resview_widget.py  test_sample_data.py  test_widget.py  test_writer.py
