[project]
name = "napari-resview"
dynamic = ["version"]
description = "A napari plugin for 3D reciprocal space mapping"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "AUTHORS.rst" },
  {email = "yangxg@bnl.gov"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.10, <3.14"
# napari can be included in dependencies if napari imports are required.
# However, you should not include napari[all], napari[qt],
# or any other Qt bindings directly (e.g. PyQt5, PySide2).
# See best practices: https://napari.org/stable/plugins/building_a_plugin/best_practices.html
dependencies = [
    "numpy",
    "magicgui",
    "xrayutilities==1.7.10",
    "qtpy",
    "scikit-image",
    "h5py",
    "hdf5plugin",
    "pyyaml>=6.0.3",
    "qtpy>=2.4.3",
    "pyside6>=6.8",
    "pyqt6",
    "magicgui>=0.10.1",
    "vtk>=9.0.0",
    "pandas>=2.3.3",
    "dask>=2024.8.0",
    "pyarrow>=21.0.0", "napari-threedee>=0.0.29,<0.0.30", "napari[qt]>=0.6.6,<0.7",
]

[project.optional-dependencies]
# Allow easily installation with the full, default napari installation
# (including Qt backend) using napari-resview[all].
all = ["napari[all]"]

testing = [
    "tox",
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
    "pytest-cov",  # https://pytest-cov.readthedocs.io/en/latest/
    "pytest-qt",  # https://pytest-qt.readthedocs.io/en/latest/
    "napari[qt]",  # test with napari's default Qt bindings
]

[dependency-groups]
dev = [
    "tox-uv",
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
    "pytest-cov",  # https://pytest-cov.readthedocs.io/en/latest/
    "pytest-qt",  # https://pytest-qt.readthedocs.io/en/latest/
    "napari[qt]",  # test with napari's default Qt bindings
    "numpy",
    "magicgui",
    "h5py",
    "scikit-image",
    "pyyaml",
    "qtpy",
]

[project.entry-points."napari.manifest"]
napari-resview = "napari_resview:napari.yaml"

[project.urls]
"Bug Tracker" = "https://github.com/XYangXRay/napari-resview/issues"
"Documentation" = "https://github.com/XYangXRay/napari-resview#README.md"
"Source Code" = "https://github.com/XYangXRay/napari-resview"
"User Support" = "https://github.com/XYangXRay/napari-resview/issues"

[build-system]
requires = ["setuptools>=42.0.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["napari_resview*"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.setuptools_scm]
write_to = "src/napari_resview/_version.py"
fallback_version = "0.0.1+nogit"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
# filterwarnings = ["error"]  # recommended by PP309; deprecation warnings cause failures so leaving for the user to enable if desired
log_cli_level = "INFO"
testpaths = ["tests"]

[tool.black]
line-length = 79
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.ruff]
line-length = 79
lint.select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
lint.ignore = [
    "UP035",
    "E501", # line too long. let black handle this
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]
fix = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
napari-resview = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
all = { features = ["all"], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
testing = { features = ["testing"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.feature.dev.pypi-dependencies]
napari-resview = { path = ".", editable = true, extras = ["dev"] }

[tool.pixi.feature.dev.tasks]
napari = "napari"
